--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,6 +2,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ .Title }}</title>
+  <link rel="manifest" href="{{ "manifest.webmanifest" | relURL }}">
+  <link rel="icon" href="{{ "favicon.ico" | relURL }}" sizes="any">
+  <link rel="icon" href="{{ "icon.svg" | relURL }}" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="{{ "apple-touch-icon.png" | relURL }}">
   <link rel="stylesheet" href="{{ "typo.css" | relURL }}">
   <link rel="stylesheet" href="{{ "style.css" | relURL }}">
 </head>
