--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,9 +3,9 @@
   {{- partial "head.html" . -}}
   <body class="typo">
     {{- partial "header.html" . -}}
-    <div id="content">
+    <main>
       {{- block "main" . }}{{- end }}
-    </div>
+    </main>
     {{- partial "footer.html" . -}}
   </body>
 </html>
