--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ site.Language.LanguageCode }}">
   {{- partial "head.html" . -}}
   <body class="typo">
     {{- partial "header.html" . -}}
